--- a/custom_portal.css
+++ b/custom_portal.css
@@ -144,7 +144,7 @@ body {
 }
 
 .login-form .btn:hover {
-    background: url("pictures/picto.jpg") no-repeat 0 52px #717783;
+    background: url("pictures/picto.jpg") no-repeat 0 52px #494d55;
 }
 
 .login-form .form-group {
